NXP-7651 introduced seam debug component for integrating with the nuxeo WAR

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <module>nuxeo-platform-webapp-base</module>
     <module>nuxeo-theme-jsf</module>
     <module>nuxeo-platform-contentview-jsf</module>
+    <module>nuxeo-platform-seam-debug</module>
   </modules>
 
   <dependencyManagement>
