--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-seam-debug</artifactId>
+        <version>${nuxeo.jsf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-ui-web-test</artifactId>
         <version>${nuxeo.jsf.version}</version>
         <scope>test</scope>
