--- a/pom.xml
+++ b/pom.xml
@@ -486,6 +486,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-seam-debug</artifactId>
+        <version>${nuxeo.jsf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-userpreferences</artifactId>
         <version>${nuxeo.features.version}</version>
       </dependency>
