NXP-7657 enable user to define list of permissions (other than Everything and Read) in Space Manager Service through an extension point

--- a/nuxeo-opensocial-gadgets-core/build.xml
+++ b/nuxeo-opensocial-gadgets-core/build.xml
@@ -9,7 +9,7 @@
 
   <!-- Create a build.properties file from build.properties.sample
        if you wish to override the JBoss paths -->
-  <property file="build.properties" />
+  <property file="../build.properties" />
   <property name="jboss.dir" value="/opt/jboss" />
 
   <property name="javac.debug" value="true" />
