--- a/nuxeo-distribution-cap-tests/pom.xml
+++ b/nuxeo-distribution-cap-tests/pom.xml
@@ -1,6 +1,4 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -17,11 +15,11 @@
   </description>
 
   <dependencies>
-    <dependency>
-      <groupId>org.nuxeo.ecm.distribution</groupId>
-      <artifactId>nuxeo-distribution-cap</artifactId>
-      <type>pom</type>
-    </dependency>
+    <!-- <dependency> -->
+    <!-- <groupId>org.nuxeo.ecm.distribution</groupId> -->
+    <!-- <artifactId>nuxeo-distribution-cap</artifactId> -->
+    <!-- <type>pom</type> -->
+    <!-- </dependency> -->
     <dependency>
       <groupId>org.nuxeo.ecm.distribution</groupId>
       <artifactId>nuxeo-functional-tests</artifactId>
