--- a/nuxeo-platform-login-cleartrust/pom.xml
+++ b/nuxeo-platform-login-cleartrust/pom.xml
@@ -10,6 +10,7 @@
   <name>RSA ClearTrust authentication plugin for Nuxeo EP</name>
   <description> This addon authenticates users against the RSA
     ClearTrust Single-Sign-On (SSO) system. </description>
+
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
@@ -32,16 +33,28 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <!--
-    <build> <plugins> <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-jar-plugin</artifactId> <version>2.2</version>
-    <configuration> <archive> <manifestFile>
-    src/main/resources/META-INF/MANIFEST.MF </manifestFile>
-    <manifestEntries> <Bundle-Version>${eclipseVersion}</Bundle-Version>
-    <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
-    </manifestEntries> </archive> <includes>
-    <include>**/Sample/*</include> </includes> </configuration>
-    </plugin> </plugins> </build>
-  -->
+
+  <!-- <build> -->
+  <!-- <plugins> -->
+  <!-- <plugin> -->
+  <!-- <groupId>org.apache.maven.plugins</groupId> -->
+  <!-- <artifactId>maven-jar-plugin</artifactId> -->
+  <!-- <version>2.2</version> -->
+  <!-- <configuration> -->
+  <!-- <archive> -->
+  <!-- <manifestFile> -->
+  <!-- src/main/resources/META-INF/MANIFEST.MF -->
+  <!-- </manifestFile> -->
+  <!-- <manifestEntries> -->
+  <!-- <Bundle-Version>${eclipseVersion}</Bundle-Version> -->
+  <!-- <Bundle-ManifestVersion>2</Bundle-ManifestVersion> -->
+  <!-- </manifestEntries> -->
+  <!-- </archive> -->
+  <!-- <includes> -->
+  <!-- <include>**/Sample/*</include> -->
+  <!-- </includes> -->
+  <!-- </configuration> -->
+  <!-- </plugin> -->
+  <!-- </plugins> -->
+  <!-- </build> -->
 </project>
