--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
@@ -13,10 +14,6 @@
   <packaging>pom</packaging>
   <description>Nuxeo Platform login parent</description>
 
-  <properties>
-    <nuxeo.platform.version>5.4.3-SNAPSHOT</nuxeo.platform.version>
-  </properties>
-
   <modules>
     <module>nuxeo-platform-login-cas2</module>
     <module>nuxeo-platform-login-mod_sso</module>
@@ -27,16 +24,6 @@
     <module>nuxeo-platform-login-digest</module>
     <module>nuxeo-platform-login-deputy</module>
   </modules>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-webapp-base</artifactId>
-        <version>${nuxeo.platform.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <repositories>
     <repository>
