NXP-7668: Add launcher.stop.max.wait parameter for nuxeo.conf

--- a/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
+++ b/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
@@ -11,6 +11,7 @@ JAVA_OPTS=-Xms512m -Xmx1024m -XX:MaxPermSize=512m -Dsun.rmi.dgc.client.gcInterva
 
 # Nuxeo launcher -----------------------------------------
 #launcher.start.max.wait = 300
+#launcher.stop.max.wait = 60
 #launcher.override.java.tmpdir = true
 
 # Nuxeo layout -------------------------------------------
