NXP-7551: Align on selenium-server-standalone (2.6.0)

--- a/.hgignore
+++ b/.hgignore
@@ -30,4 +30,5 @@ nuxeo-platform-document-routing-distribution/ftest/selenium/log.txt
 nuxeo-platform-document-routing-distribution/ftest/selenium/result-suite.html
 nuxeo-platform-document-routing-distribution/ftest/selenium/run.conf.sample
 nuxeo-platform-document-routing-distribution/ftest/selenium/user-extensions.js
+nuxeo-platform-document-routing-distribution/ftest/selenium/selenium-server.jar
 integration-lib.sh
