--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/pom.xml
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/pom.xml
@@ -20,10 +20,9 @@
         <configuration>
           <artifactItems>
             <artifactItem>
-              <groupId>org.seleniumhq.selenium.server</groupId>
-              <artifactId>selenium-server</artifactId>
-              <version>1.0.3</version>
-              <classifier>standalone</classifier>
+              <groupId>org.seleniumhq.selenium</groupId>
+              <artifactId>selenium-server-standalone</artifactId>
+              <version>2.6.0</version>
               <overWrite>false</overWrite>
               <outputDirectory>.</outputDirectory>
               <destFileName>selenium-server.jar</destFileName>
