--- a/pom.xml
+++ b/pom.xml
@@ -4134,7 +4134,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.0-beta-1</version>
+          <version>1.0.1</version>
           <configuration>
             <rules>
               <requirePluginVersions>
@@ -4156,6 +4156,7 @@
                 <version>[1.6,)</version>
               </requireJavaVersion>
             </rules>
+            <skip>true</skip>
           </configuration>
         </plugin>
         <plugin>
@@ -4262,9 +4263,18 @@
               </execution>
             </executions>
           </plugin>
-          <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-enforcer-plugin</artifactId>
-            <executions> <execution> <id>enforce-plugin-versions</id> <goals> <goal>enforce</goal>
-            </goals> </execution> </executions> </plugin> -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>enforce-plugin-versions</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
