--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
 
     <!-- deprecated property since removal of maven-nuxeo-plugin execution -->
     <eclipseVersion>${project.version}</eclipseVersion>
+    <!-- Convenient property; prefer use of the right property (runtime/core/...) -->
+    <nuxeo.platform.version>5.4.3-SNAPSHOT</nuxeo.platform.version>
   </properties>
 
   <dependencyManagement>
