--- a/nuxeo-runtime-gf3-adapter/pom.xml
+++ b/nuxeo-runtime-gf3-adapter/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF12</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
