--- a/nuxeo-platform-video-convert/pom.xml
+++ b/nuxeo-platform-video-convert/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-video-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF12</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
