--- a/nuxeo-core-test/pom.xml
+++ b/nuxeo-core-test/pom.xml
@@ -57,5 +57,19 @@
       <scope>compile</scope>
     </dependency>
 
+    <!-- test-only dependencies -->
+
+    <dependency>
+      <groupId>javax.script</groupId>
+      <artifactId>groovy-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+
   </dependencies>
 </project>
