--- a/pom.xml
+++ b/pom.xml
@@ -3383,6 +3383,7 @@
       <dependency>
         <groupId>org.apache.tomcat</groupId>
         <artifactId>catalina</artifactId>
+        <scope>provided</scope>
         <version>6.0.20</version>
         <exclusions>
           <exclusion>
@@ -3416,6 +3417,7 @@
         <groupId>org.apache.tomcat</groupId>
         <artifactId>coyote</artifactId>
         <version>6.0.20</version>
+        <scope>provided</scope>
       </dependency>
 
       <!-- Test Scope -->
