--- a/nuxeo-runtime-tomcat-adapter/pom.xml
+++ b/nuxeo-runtime-tomcat-adapter/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>coyote</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
