NXP-3519: add ICU, positional extraction and use latest version of PDBbox for proper text extraction of right to left languages from PDF files

--- a/nuxeo-core-convert-plugins/pom.xml
+++ b/nuxeo-core-convert-plugins/pom.xml
@@ -39,20 +39,26 @@
       <artifactId>pdfbox</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>fontbox</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>jempbox</artifactId>
+    </dependency>
+    <!-- ICU is an optional dependency for PDFBox but is required at runtime to
+    support right to left language handling -->
+    <dependency>
+      <groupId>com.ibm.icu</groupId>
+      <artifactId>icu4j</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcmail-jdk15</artifactId>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.fontbox</groupId>
-      <artifactId>fontbox</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jempbox</groupId>
-      <artifactId>jempbox</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
