--- a/pom.xml
+++ b/pom.xml
@@ -4080,22 +4080,27 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
+        <version>2.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.5</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.6</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.5</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <formats>
             <format>html</format>
@@ -4106,6 +4111,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
+        <version>1.1</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -4229,12 +4235,12 @@
               <maxmemory>512m</maxmemory>
               <!-- stylesheetfile>${basedir}/src/site/resources/css/jdstyle.css </stylesheetfile -->
               <windowtitle>
-                ${pom.name} ${pom.version} API Documentation
+                ${project.name} ${project.version} API Documentation
               </windowtitle>
               <doctitle>
-                ${pom.name} ${pom.version} API Documentation
+                ${project.name} ${project.version} API Documentation
               </doctitle>
-              <header>${pom.name} ${pom.version}</header>
+              <header>${project.name} ${project.version}</header>
               <links>
                 <link>http://download.oracle.com/javase/6/docs/api/</link>
                 <link>http://download.oracle.com/javaee/6/api/</link>
