NXP-7717: add net.htmlparser.jericho as new dependency

--- a/pom.xml
+++ b/pom.xml
@@ -3596,6 +3596,12 @@
         <artifactId>webdav-jaxrs</artifactId>
         <version>1.1.1</version>
       </dependency>
+
+      <dependency>
+        <groupId>net.htmlparser.jericho</groupId>
+        <artifactId>jericho-html</artifactId>
+        <version>3.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
