--- a/pom.xml
+++ b/pom.xml
@@ -844,7 +844,7 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.nuxeo.ecm.automation</groupId>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-features-test</artifactId>
         <version>${nuxeo.features.version}</version>
         <scope>test</scope>
