NXP-7717: make the HTML extractor preserver right to left ordering using the Jericho HTML parser

--- a/nuxeo-core-convert-plugins/pom.xml
+++ b/nuxeo-core-convert-plugins/pom.xml
@@ -85,6 +85,10 @@
       <artifactId>mail</artifactId>
     </dependency>
     <dependency>
+      <groupId>net.htmlparser.jericho</groupId>
+      <artifactId>jericho-html</artifactId>
+    </dependency>
+    <dependency>
       <groupId>xerces</groupId>
       <artifactId>xmlParserAPIs</artifactId>
       <scope>provided</scope>
