--- a/nuxeo-automation/nuxeo-automation-features/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-features/pom.xml
@@ -109,6 +109,15 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-api</artifactId>
     </dependency>
+    <!-- JSON -->
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+    </dependency>
     <!-- for Pictures management -->
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
