NXP-7728 Add test + add parameter to define the views size

--- a/nuxeo-automation/nuxeo-automation-features/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-features/pom.xml
@@ -185,5 +185,9 @@
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime-test</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.automation</groupId>
+      <artifactId>nuxeo-automation-server</artifactId>
+    </dependency>
   </dependencies>
 </project>
