--- a/nuxeo-distribution-tomcat/pom.xml
+++ b/nuxeo-distribution-tomcat/pom.xml
@@ -25,6 +25,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-datasource</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime-tomcat-adapter</artifactId>
     </dependency>
     <dependency>
