add dependencyManagement for org.nuxeo.ecm.distribution:nuxeo-distribution-tests

--- a/pom.xml
+++ b/pom.xml
@@ -1729,6 +1729,13 @@
         <version>${nuxeo.distribution.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-distribution-tests</artifactId>
+        <version>${nuxeo.distribution.version}</version>
+        <type>pom</type>
+        <scope>test</scope>
+      </dependency>
 
       <!-- Third parties -->
       <dependency>
