--- a/nuxeo-platform-document-routing-core/pom.xml
+++ b/nuxeo-platform-document-routing-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-document-routing</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111020_1649</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
