NXP-7749 remove osgi duplicated deps

--- a/pom.xml
+++ b/pom.xml
@@ -3554,6 +3554,12 @@
         <groupId>org.apache.chemistry.opencmis</groupId>
         <artifactId>chemistry-opencmis-client-impl</artifactId>
         <version>${chemistry.opencmis.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.osgi.core</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.chemistry.opencmis</groupId>
