NXP-7750 remove duplicate classes in runtime classpath

--- a/nuxeo-runtime-jtajca/pom.xml
+++ b/nuxeo-runtime-jtajca/pom.xml
@@ -39,8 +39,8 @@
       <artifactId>geronimo-transaction</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jta_1.1_spec</artifactId>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
     </dependency>
   </dependencies>
 
