NXP-7750 remove duplicate classes in runtime classpath

--- a/nuxeo-webdav/pom.xml
+++ b/nuxeo-webdav/pom.xml
@@ -106,8 +106,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.ressource</groupId>
-      <artifactId>jca-api</artifactId>
+      <groupId>javax.resource</groupId>
+      <artifactId>connector-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.transaction</groupId>
