--- a/nuxeo-core-persistence/pom.xml
+++ b/nuxeo-core-persistence/pom.xml
@@ -42,7 +42,7 @@
 
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
