NXP-7750 remove duplicate classes in runtime classpath

--- a/nuxeo-distribution-coreserver/pom.xml
+++ b/nuxeo-distribution-coreserver/pom.xml
@@ -113,6 +113,12 @@
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-audit-core</artifactId>
+      <exclusions>
+	<exclusion>
+	  <groupId>de.odysseus.juel</groupId>
+	  <artifactId>juel-api</artifactId>
+	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
@@ -292,6 +298,13 @@
 
   <build>
     <plugins>
+      <plugin>
+	<groupId>org.jboss.tattletale</groupId>
+	<artifactId>tattletale-maven</artifactId>
+	<configuration>
+	  <source>${project.build.directory}/nuxeo.ear/lib</source>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.nuxeo.build</groupId>
         <artifactId>nuxeo-distribution-tools</artifactId>
