NXP-7750 remove duplicate classes in runtime classpath

--- a/nuxeo-platform-annotations/nuxeo-platform-annotations-repository-plugin/pom.xml
+++ b/nuxeo-platform-annotations/nuxeo-platform-annotations-repository-plugin/pom.xml
@@ -53,16 +53,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.ejb</groupId>
-      <artifactId>ejb</artifactId>
-    </dependency>
-    <dependency>
       <groupId>commons-logging</groupId>
-      <artifactId>commons-logging-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.jms</groupId>
-      <artifactId>jms</artifactId>
+      <artifactId>commons-logging</artifactId>
     </dependency>
 
     <!-- scope test -->
