--- a/nuxeo-platform-notification/nuxeo-platform-notification-core/pom.xml
+++ b/nuxeo-platform-notification/nuxeo-platform-notification-core/pom.xml
@@ -55,7 +55,7 @@
     </dependency>
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.mail</groupId>
