--- a/nuxeo-platform-tag-service/nuxeo-platform-tag-core/pom.xml
+++ b/nuxeo-platform-tag-service/nuxeo-platform-tag-core/pom.xml
@@ -58,7 +58,7 @@
     <!-- Persistence -->
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
