--- a/nuxeo-platform-webwidgets/nuxeo-theme-webwidgets/pom.xml
+++ b/nuxeo-platform-webwidgets/nuxeo-theme-webwidgets/pom.xml
@@ -40,7 +40,7 @@
     <!-- persistence -->
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
