--- a/nuxeo-automation/nuxeo-automation-features/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-features/pom.xml
@@ -160,7 +160,7 @@
     </dependency>
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
     <!-- for audit serialization -->
     <dependency>
