--- a/nuxeo-platform-annotations/nuxeo-platform-annotations-core/pom.xml
+++ b/nuxeo-platform-annotations/nuxeo-platform-annotations-core/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
-      <artifactId>commons-logging-api</artifactId>
+      <artifactId>commons-logging</artifactId>
     </dependency>
 
     <dependency>
