--- a/nuxeo-platform-audit/nuxeo-platform-audit-io/pom.xml
+++ b/nuxeo-platform-audit/nuxeo-platform-audit-io/pom.xml
@@ -34,7 +34,7 @@
     </dependency>
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
