--- a/nuxeo-platform-relations/nuxeo-platform-relations-jena-plugin/pom.xml
+++ b/nuxeo-platform-relations/nuxeo-platform-relations-jena-plugin/pom.xml
@@ -43,7 +43,7 @@
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
-      <artifactId>commons-logging-api</artifactId>
+      <artifactId>commons-logging</artifactId>
     </dependency>
 
     <!-- test scope -->
