--- a/nuxeo-platform-tag-service/nuxeo-platform-tag-api/pom.xml
+++ b/nuxeo-platform-tag-service/nuxeo-platform-tag-api/pom.xml
@@ -25,7 +25,7 @@
     <!-- Persistence -->
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
