NXP-7750 remove duplicate classes in runtime classpath

--- a/nuxeo-platform-ui-web-compat/pom.xml
+++ b/nuxeo-platform-ui-web-compat/pom.xml
@@ -18,8 +18,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>el-api</artifactId>
+      <groupId>de.odysseus.juel</groupId>
+      <artifactId>juel-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.faces</groupId>
