--- a/nuxeo-platform-forms-layout-client/pom.xml
+++ b/nuxeo-platform-forms-layout-client/pom.xml
@@ -54,8 +54,8 @@
 
     <!-- EL + JSF + facelets deps -->
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>el-api</artifactId>
+      <groupId>de.odysseus.juel</groupId>
+      <artifactId>juel-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.faces</groupId>
@@ -83,6 +83,7 @@
       <plugin>
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <taglib.src.dir>src/main/resources/WEB</taglib.src.dir>
         </configuration>
