--- a/nuxeo-theme-jsf/pom.xml
+++ b/nuxeo-theme-jsf/pom.xml
@@ -34,10 +34,6 @@
       <artifactId>nuxeo-theme-fragments</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.nuxeo.runtime</groupId>
-      <artifactId>nuxeo-runtime</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-ui-web</artifactId>
     </dependency>
@@ -47,8 +43,8 @@
       <artifactId>ezmorph</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>el-api</artifactId>
+      <groupId>de.odysseus.juel</groupId>
+      <artifactId>juel-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.seam</groupId>
@@ -108,6 +104,7 @@
       <plugin>
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <taglib.src.dir>${project.build.directory}/classes/META-INF</taglib.src.dir>
         </configuration>
