--- a/nuxeo-platform-versioning-core/pom.xml
+++ b/nuxeo-platform-versioning-core/pom.xml
@@ -36,7 +36,7 @@
 
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
 
     <dependency>
