NXP-7750 remove duplicate classes in runtime classpath

--- a/nuxeo-theme-core/pom.xml
+++ b/nuxeo-theme-core/pom.xml
@@ -60,6 +60,10 @@
       <artifactId>milyn-magger</artifactId>
     </dependency>
     <dependency>
+      <groupId> org.apache.xmlgraphics</groupId>
+      <artifactId>batik-css</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.milyn</groupId>
       <artifactId>milyn-commons</artifactId>
     </dependency>
