--- a/nuxeo-theme-html/pom.xml
+++ b/nuxeo-theme-html/pom.xml
@@ -37,8 +37,8 @@
       <artifactId>ezmorph</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>el-api</artifactId>
+      <groupId>de.odysseus.juel</groupId>
+      <artifactId>juel-api</artifactId>
     </dependency>
 
     <dependency>
@@ -103,6 +103,7 @@
       <plugin>
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <taglib.src.dir>
             ${project.build.directory}/classes/META-INF
